src/styles/Gallery.scss
.gallery {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    h1 {
        font-size: 2rem;
    }
    .collections {
        // width: 100%;
        column-width: 12rem;
        column-gap: 0.5rem;
        background: #c0c0c0;
        border: 1px solid;
        padding: 0.5rem;

        .img-container {
            break-inside: avoid; 
            margin-bottom: 0.25rem; 
            transform: translateZ(0); 
            overflow: hidden;

            img {
                display: block;
                width: 100%;
                height: auto;
                transition: transform 0.5s ease;
                object-fit: cover;

            }
            &:hover {
                img {
                    transform: scale(1.1);
                }
            }
        }
    }
}

